# normal-stellar-amm

./: .env.example  .gitignore  COMPREHENSIVE_TEST_ANALYSIS_REPORT.md  Cargo.toml  RUNNING_TESTS.md  Taskfile.yaml  gh_fork_output.txt  initialize.js  package.json  readme.md  rust-toolchain.toml  test_run_insurance.txt  test_run_oracle.txt  test_run_pool.txt
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: release-new-index.md  release-new-token.md
.github/workflows/: release.yml  release_extra.yml  rust.yml  scout.yml
access_control/: Cargo.toml
audits/: THREAT.MD
audits/scout/: report.html
bindings/buffer/: README.md  package.json
bindings/config_storage/: README.md  package.json
bindings/insurance_fund/: README.md  package.json
contracts/: soroban_fees_collector_contract.wasm  soroban_liquidity_pool_contract.wasm  soroban_liquidity_pool_liquidity_calculator_contract.wasm  soroban_liquidity_pool_plane_contract.wasm  soroban_liquidity_pool_provider_swap_fee_contract.wasm  soroban_liquidity_pool_provider_swap_fee_factory_contract.wasm  soroban_liquidity_pool_router_contract.wasm  soroban_liquidity_pool_stableswap_contract.wasm  soroban_locker_feed_contract.wasm  soroban_token_contract.wasm
contracts/config_storage/: Cargo.toml  Taskfile.yaml
contracts/config_storage/src/: contract.rs
contracts/insurance_fund/: Cargo.toml  Taskfile.yaml
contracts/insurance_fund/src/: contract.rs  errors.rs  events.rs  fund_interface.rs  interest.rs  interface.rs  lib.rs  reserve.rs  stake.rs  storage.rs  test.rs  test_math.rs  test_permissions.rs  testutils.rs
contracts/insurance_fund/src/tests/: advanced_attack_tests.rs  calculation_tests.rs  mod.rs  security_calculation_tests.rs
contracts/integration_tests/: Cargo.toml  Taskfile.yaml
contracts/integration_tests/src/: contracts.rs  lib.rs  test_permissions.rs  tests.rs  testutils.rs
contracts/liquidity_calculator/: Cargo.toml  Taskfile.yaml
contracts/liquidity_calculator/src/: constants.rs  contract.rs  lib.rs  plane.rs  standard_pool.rs  test.rs  test_permissions.rs  testutils.rs
contracts/liquidity_pool_router/: Cargo.toml  Taskfile.yaml
contracts/liquidity_pool_router/src/: constants.rs  contract.rs  errors.rs  events.rs  lib.rs  liquidity_calculator.rs  pool_interface.rs  pool_utils.rs  router_interface.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs
contracts/lp_token/: Cargo.toml  Taskfile.yaml
contracts/lp_token/src/: contract.rs  lib.rs  pool.rs  test.rs  test_permissions.rs  testutils.rs
contracts/oracle_registry/: Cargo.toml  Taskfile.yaml
contracts/oracle_registry/src/: contract.rs  errors.rs  events.rs  interface.rs  lib.rs  oracle.rs  registry_interface.rs  simple_oracle_test.rs  storage.rs  storage_types.rs  test.rs  test_permissions.rs  testutils.rs
contracts/oracle_registry/src/tests/: advanced_twap_attacks.rs  mod.rs  or01_simple_poc.rs  or01_uptick_panic.rs  or07_down_tick_panic.rs  security_twap_tests.rs  security_validation_tests.rs  twap_tests.rs  unregistered_oracle_panic.rs
contracts/pool_elastic/: Cargo.toml  Taskfile.yaml
contracts/pool_elastic/src/: bonus.rs  circuit_breaker.rs  contract.rs  errors.rs  lib.rs  oracle.rs  plane.rs  pool.rs  pool_interface.rs  rebase.rs  storage.rs  tax.rs  test.rs  testutils.rs
contracts/pool_router/: Cargo.toml  Taskfile.yaml
contracts/pool_router/src/: contract.rs  errors.rs  events.rs  lib.rs  liquidity_calculator.rs  pool_interface.rs  pool_utils.rs  rewards_gauge.rs  router_interface.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs
contracts/pool_router/src/math/: mod.rs
contracts/pool_swap_fee/: Cargo.toml  Taskfile.yaml
contracts/pool_swap_fee/src/: contract.rs  errors.rs  events.rs  interface.rs  lib.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs
contracts/pool_swap_fee/src/tests/: calculation_tests.rs  security_calculation_tests.rs
contracts/token_share/: Cargo.toml  Taskfile.yaml
contracts/token_share/src/: contract.rs  lib.rs
contracts/utils/: Cargo.toml
contracts/utils/src/: bump.rs  constant.rs  helpers.rs  lib.rs  macros.rs  oracle.rs  storage.rs  test_utils.rs  token.rs
contracts/utils/src/errors/: math_errors.rs  mod.rs  oracle_error.rs
contracts/utils/src/interfaces/: mod.rs  reflector.rs
contracts/utils/src/math/: ceil_div.rs  floor_div.rs  mod.rs  pool.rs  safe_math.rs  stats.rs
contracts/utils/src/test/: helpers.rs
docs/: README.md  pool_security_tests.csv
integration_tests/: Cargo.toml
liquidity_pool/: Cargo.toml
liquidity_pool_router/: Cargo.toml  Taskfile.yaml
modules/incentives/: Cargo.toml
modules/incentives/src/: errors.rs  events.rs  lib.rs  manager.rs  storage.rs
modules/utils/: Cargo.toml
modules/utils/src/: bump.rs  constant.rs  lib.rs  macros.rs  oracle.rs  storage.rs  temporal.rs  test_utils.rs  token.rs  validation.rs
modules/utils/src/errors/: math_errors.rs  mod.rs  oracle_error.rs  storage_errors.rs  validation_errors.rs
modules/utils/src/math/: mod.rs  pool.rs  safe_math.rs  stats.rs
modules/utils/src/state/: access.rs  mod.rs  oracle.rs  oracle_registry.rs  pool.rs  token.rs
modules/utils/src/test/: helpers.rs
scripts/: create-mpc.sh  deploy-reward-gauge.sh  deploy-verified.sh  deploy.sh  deploy_mainnet.sh  deploy_pool.sh  deploy_testnet.sh  generate-bindings.sh  load-env.sh  prefix_errors.sh  register_oracle.sh  run_prefix_all.sh  setup.sh  update_pool_hash.sh  verify.sh
utils/: Cargo.toml
wasm/: soroban_buffer_contract.wasm  soroban_fees_collector_contract.wasm  soroban_insurance_fund_contract.wasm  soroban_liquidity_pool_contract.wasm  soroban_liquidity_pool_liquidity_calculator_contract.wasm  soroban_liquidity_pool_plane_contract.wasm  soroban_liquidity_pool_provider_swap_fee_contract.wasm  soroban_liquidity_pool_provider_swap_fee_factory_contract.wasm  soroban_liquidity_pool_router_contract.wasm  soroban_locker_feed_contract.wasm  soroban_oracle_registry_contract.wasm  soroban_pool_contract.wasm  soroban_pool_provider_swap_fee_contract.wasm  soroban_pool_router_contract.wasm  soroban_token_contract.wasm
(+305 files in other folders)
