[workspace]
resolver = "2"
members = ["contracts/*", "modules/*"]

[workspace.package]
version = "0.1.0"
rust-version = "1.84"

[workspace.dependencies]
soroban-sdk = { version = "22.0.6" }
soroban-token-sdk = { version = "22.0.6" }
soroban-fixed-point-math = { version = "1.3.0" }
paste = { version = "1.0.15" }
utils = { path = "modules/utils" }
access_control = { path = "modules/access_control" }
pool_tokens = { path = "modules/pool_tokens" }
incentives = { path = "modules/incentives" }
upgrade = { path = "modules/upgrade" }
sep-40-oracle = "1.2.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
