[workspace]
resolver = "2"
members = ["contracts/*", "modules/*"]

[workspace.package]
version = "1.0.0"
rust-version = "1.84"

[workspace.dependencies]
soroban-sdk = { version = "22.0.6" }
soroban-token-sdk = { version = "22.0.6" }
soroban-fixed-point-math = { version = "1.3.0" }
paste = { version = "1.0.15" }
utils = { path = "modules/utils" }
access_control = { path = "modules/access_control" }
token_lp = { path = "modules/token_lp" }
token_synthetic = { path = "modules/token_synthetic" }
incentives = { path = "modules/incentives" }
reentrancy_guard = { path = "modules/reentrancy_guard" }
upgrade = { path = "modules/upgrade" }
sep-40-oracle = "1.2.2"
normal-rust-types = { version = "0.1.5" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
