[package]
name = "insurance-fund"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
paste = { workspace = true }
access_control = { workspace = true }
utils = { workspace = true }
upgrade = { workspace = true }
reentrancy_guard = { workspace = true }
soroban-fixed-point-math = { workspace = true }
normal-rust-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
