[package]
name = "integration-tests"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
sep-40-oracle = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
sep-40-oracle = { workspace = true, features = ["testutils"] }
token_lp = { workspace = true }
