[package]
name = "soroban-liquidity-pool-router-contract"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
paste = { workspace = true }
access_control = { workspace = true }
utils = { workspace = true }
incentives = { workspace = true }
token_share = { workspace = true }
upgrade = { workspace = true }
sep-40-oracle = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
sep-40-oracle = { workspace = true, features = ["testutils"] }
