[package]
name = "lp-token"
description = "Augmented soroban token contract tracking incentives on transfer"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
access_control = { workspace = true }
utils = { workspace = true }
upgrade = { workspace = true }
normal-rust-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
