[package]
name = "pool-router"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
paste = { workspace = true }
access_control = { workspace = true }
utils = { workspace = true }
incentives = { workspace = true }
reentrancy_guard = { workspace = true }
upgrade = { workspace = true }
sep-40-oracle = { workspace = true }
normal-rust-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
sep-40-oracle = { workspace = true, features = ["testutils"] }
token_lp = { workspace = true }
