[package]
name = "token-share"
description = "Soroban token contract for LP shares"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
access_control = { workspace = true }
utils = { workspace = true }
upgrade = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
