[package]
name = "utils"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true


[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
sep-40-oracle = { workspace = true }
num-traits = "0.2"

[features]
default = []
testutils = []
