[package]
name = "incentives"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true


[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
soroban-fixed-point-math = { workspace = true }
normal-rust-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
